--- a/css/style.css
+++ b/css/style.css
@@ -1219,22 +1219,28 @@ line-height: 1;
   line-height: 1.25;
 }
 
-.write-us-link {
-  display: inline-block;
+.write-us-button {
+  width: 300px;
   margin: 0;
-  padding-top: 12px;
-  padding-right: 59px;
+  padding-top: 10px;
   padding-bottom: 9px;
-  padding-left: 63px;
-  list-style: none;
-  text-align: center;
   text-transform: uppercase;
   color: #fff;
   border-radius: 3px;
+  border: 1px solid #ee3643;
   background-color: #ee3643;
   font-size: 14px;
-  font-weight: 400;
   line-height: 1.25;
+}
+
+.write-us-button:hover {
+  border: 1px solid #ca2c37;
+  background-color: #ca2c37;
+}
+
+.write-us-button:active {
+  border: 1px solid #ba2732;
+  background-color: #ba2732;
 }
 
 .map {
@@ -1468,43 +1474,77 @@ line-height: 1;
 
 /* @end footer third line */
 /* @group modal popups */
+
 .modal-contacts-popup {
-  position: fixed;
+  position: absolute;
+  /* display: none; */
+  top: 0;
+  left: 51%;
+  margin-left: -322px;
   width: 620px;
-  height: 430px;
   background-color: #fff;
   background-image: url(../img/popup-line.svg);
   background-repeat: no-repeat;
   box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.75);
 }
 
-.write-us {
+.modal-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.write-us-container {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 620px;
-  height: 430px;
+  margin: 0;
 }
 
 .first-line {
-  width: 220px;
-  height: 64px;
-  margin: 48px 20px 22px 80px;
+  display: flex;
+  justify-content: space-between;
+  width: 460px;
+  margin-top: 54px;
+  margin-left: 77px;
 }
 
-.modal-name,
-.name {
-  text-align: left;
-  letter-spacing: normal;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
+.modal-form {
+  display: block;
+  margin-top: 0;
+  width: 460px;
+}
+
+.modal-form input {
+  font-family: "PT Sans" sans-serif;
+  font-size: 14px;
+  line-height: 1.25;
+  color: #a9a9a9;
+}
+
+.modal-form label {
+  font-size: 17px;
+  line-height: 1;
+  color: #000000;
+}
+
+.first-field,
+.second-field {
+  margin: 0;
+  padding: 0;
+}
+
+.letter {
+  display: block;
+  width: 460px;
+  margin-top: 19px;
+  margin-bottom: 35px;
+  margin-left: 78px;
 }
 
 .name {
   display: block;
-  margin-bottom: 13px;
+  margin-bottom: 10px;
   color: #000;
   font-size: 17.5px;
   line-height: 1;
@@ -1524,12 +1564,6 @@ line-height: 1;
   line-height: 1.25;
 }
 
-.second-line {
-  width: 218px;
-  height: 64px;
-  margin: 48px 80px 22px 0;
-}
-
 .email,
 .modal-email {
   text-align: left;
@@ -1541,7 +1575,7 @@ line-height: 1;
 
 .email {
   display: block;
-  margin-bottom: 13px;
+  margin-bottom: 10px;
   color: #000;
   font-size: 17.5px;
   line-height: 1;
@@ -1561,25 +1595,9 @@ line-height: 1;
   line-height: 1.25;
 }
 
-.third-line {
-  width: 460px;
-  height: 140px;
-  margin-right: 80px;
-  margin-left: 80px;
-}
-
-.modal-text,
-.text {
-  text-align: left;
-  letter-spacing: normal;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-}
-
 .text {
   display: block;
-  margin-bottom: 13px;
+  margin-bottom: 12px;
   color: #000;
   font-size: 17.5px;
   line-height: 1;
@@ -1588,7 +1606,7 @@ line-height: 1;
 .modal-text {
   box-sizing: border-box;
   width: 458px;
-  height: 114px;
+  max-height: 114px;
   padding-top: 13px;
   padding-bottom: 88px;
   padding-left: 13px;
@@ -1599,38 +1617,26 @@ line-height: 1;
   line-height: 1.25;
 }
 
-.fourth-line {
+.button-container {
   width: 620px;
-  height: 112px;
-  margin-top: 37px;
+  padding-top: 37px;
+  padding-bottom: 37px;
   background-color: #f4f4f4;
-}
-
-.third-line input[type=text] {
-  box-sizing: border-box;
-  width: 100%;
-  padding-top: 13px;
-  padding-left: 13px;
 }
 
 .popup-button {
   display: block;
   width: 460px;
-  height: 38px;
-  margin: 37px 80px;
+  margin-left: 80px;
   padding-top: 12px;
   padding-bottom: 11px;
-  text-align: center;
-  letter-spacing: normal;
   text-transform: uppercase;
   color: #fff;
   border: 0;
   background-color: #ee3643;
   font-size: 14px;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
   line-height: 1.25;
+  border-radius: 3px;
 }
 
 .modal-close {
@@ -1642,6 +1648,7 @@ line-height: 1;
   cursor: pointer;
   border: 0;
   font-size: 0;
+  background: transparent;
 }
 
 .modal-close::after,
@@ -1664,11 +1671,29 @@ line-height: 1;
 }
 
 .map-popup {
-  position: relative;
+  /* display: none; */
+  position: absolute;
+  top: 30%;
+  left: 50%;
   width: 940px;
-  height: 447px;
-  margin: 0;
+  max-height: 447px;
+  box-sizing: border-box;
+  margin-left: -422px;
   padding: 0;
+}
+
+.map-popup iframe {
+  position: relative;
+  z-index: 2;
+  border: none;
+}
+
+.map-popup p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  margin: 0;
 }
 
 .big-map {
@@ -1684,6 +1709,8 @@ line-height: 1;
   cursor: pointer;
   border: 0;
   font-size: 0;
+  z-index: 3;
+  background: transparent;
 }
 
 .map-close::after,
@@ -1703,11 +1730,6 @@ line-height: 1;
 
 .map-close::after {
   transform: rotate(-45deg);
-}
-
-.map-popup,
-.modal-close {
-  background: transparent;
 }
 
 /* @end modal popups */
@@ -2419,12 +2441,6 @@ line-height: 1;
   background-color: #ee3643;
 }
 
-.write-us {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .modal-buttons {
   display: flex;
   align-items: center;
@@ -2510,4 +2526,22 @@ line-height: 1;
 .popup-title {
   display: block;
   width: 414px;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
