--- a/css/style.css
+++ b/css/style.css
@@ -1618,6 +1618,7 @@ img {
   top: 50%;
   left: 50%;
   margin-left: -470px;
+  margin-top: -223px;
   box-sizing: border-box;
   padding: 0;
 }
@@ -2354,6 +2355,7 @@ img {
   top: 50%;
   left: 50%;
   margin-left: -320px;
+  margin-top: -310px;
   width: 620px;
   box-shadow: 0 20px 40px 0 rgba(41, 52, 73, 0.75);
   border-top: 7px solid #ee3643;
